--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@
 }
 
 .tile {
-  border: 1px solid #FAFAFA;;
+  border: 1px solid #FAFAFA;
   min-width: 100px;
   min-height: 100px;
   display: flex;
@@ -62,6 +62,15 @@
 .playerO {
   color: #0284C7;;
   transition: all 0.3s ease-in;
+}
+
+.announcer {
+  color: #FAFAFA;
+  margin-top: 20px;
+}
+
+.win {
+  background-color: #FAFAFA;
 }
 
 #reset {
